# brian-wilson-invitational

./: .env.dist  .gitignore  README.md  artist_popularity.py  artist_unpopularity.py  bit_of_fun.py  buildb.py  builddb.py  builddb.sh  builddbs1.py  builddbs2.py  bwi.duckdb  bwi_ui.duckdb  cros_season_voting_by_playlist_position.py  db_ui.sh  genres.py  leaderboard.py  main.py  meh_songs.py  point_breakdown_heatmap.py  pyproject.toml  season2.duckdb  season3.duckdb  song_popularity.py  song_unpopularity.py  streamlit.sh  vote_breakdown_by_point.py  vote_breakdown_heatmap.py  votes_given.py  voting_by_playlist_position.py  wordclouds.py
season1/: competitors.csv  rounds.csv  submissions.csv  votes.csv
season3/: competitors.csv  rounds.csv  submissions.csv  votes.csv
