[project]
name = "brian-wilson-invitational"
version = "0.1.0"
description = "Musicleague stats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "matplotlib>=3.10.7",
    "pandas-stubs==2.3.2.250926",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "wordcloud>=1.9.4",
]
